Improve actions block responsive styling Correct link styling for staff contacts Remove redundant px unit from css values of 0 Align with template updates (SCSS vs SASS)

--- a/assets/scss/components/_actions-block.scss
+++ b/assets/scss/components/_actions-block.scss
@@ -24,10 +24,18 @@
 
     img {
       margin-right: 15px;
+
+      @media (max-width: 1000px) {
+        display: none;
+      }
     }
 
     a {
       font-weight: 700;
+
+      @media (max-width: 1000px) {
+        font-size: 16px;
+      }
     }
   }
 
@@ -35,4 +43,3 @@
     border-bottom: 2px solid $govuk-border-colour;
   }
 }
-
